# quits

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
doc/: 00_getting_started.ipynb  01A_codes_basics.ipynb  01A_codes_basics.md  01B_make_my_own_code.ipynb  01_codes_basics.ipynb  02A_custom_circuit_generation.ipynb  02B_cardinal_circuit_generation.ipynb  02C_zxcoloration_circuit_generation.ipynb  02_circuit_generation.ipynb  03_simulation_pipeline.ipynb  04_decoding_sliding_window.ipynb  05_decoder_variants.ipynb  06A_end_to_end_demo_hgp.ipynb  06B_end_to_end_demo_bb.ipynb  06_end_to_end_demo.ipynb  circuit_distance_search.py  effective_circuit_distance_search.py  intro.ipynb  old_intro.ipynb  refactor_plan.md
doc/.ipynb_checkpoints/: intro-checkpoint.ipynb
examples/: circuit_distance_search.py
parity_check_matrices/: 633__C2xC2_AAp0_0_0_0_1_2_3_BBp0_0_0_1_1_2_2_k12_d11__Hx.mtx  633__C2xC2_AAp0_0_0_0_1_2_3_BBp0_0_0_1_1_2_2_k12_d11__Hz.mtx
src/QUITS.egg-info/: PKG-INFO  SOURCES.txt
src/quits/: __init__.py  api.py  circuit.py  decoder.py  gf2_util.py  gf2_utility.py  ldpc_util.py  qldpc_code.py  simulation.py
src/quits/decoder/: __init__.py  base.py  bplsd.py  bposd.py  sliding_window.py
tests/: test_bb.py  test_cardinalNSmerge.py  test_cardinalnsmerge.py  test_circuit.py  test_codes.py  test_decoders.py  test_edge_coloration.py  test_examples.py  test_intro_examples.py  test_qldpc_util.py  test_sliding_window.py
(+28 files in other folders)
